[UPDATE] Add new functions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div>
             <button id="btn-add">Agregar Contacto</button>
             <button id="btn-see">Mostrar lista de Contactos</button>
+            <button id="btn-del">Eliminar Contacto</button>
+            <button id="btn-find">Buscar Contacto</button>
           
         </div>
         <div id="divchar"></div>
